// Vitest Snapshot v1

exports[`lib/fitness > display fitness breakdown and stats 1`] = `
"**2.24%** complete
**14.29** / 637 miles
---
Needed to be on track today
- **3.16** miles
Needed to be on track this week
- **11.88** miles / 5 days
- **2.38** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > handles Sunday when ahead 1`] = `
"**2.93%** complete
**18.64** / 637 miles
---
You're **4.68** miles ahead for today!
You're **4.68** miles ahead for the week!
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 9, 12:00am
"
`;

exports[`lib/fitness > handles Sunday when behind 1`] = `
"**1.95%** complete
**12.43** / 637 miles
---
Needed to be on track today
- **1.53** miles
Needed to be on track this week
- **1.53** miles today
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 9, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when ahead for today and for the week 1`] = `
"**2.35%** complete
**14.96** / 637 miles
---
You're **1** mile ahead for today!
You're **1** mile ahead for the week!
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 9, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for the week 1`] = `
"**3.95%** complete
**25.18** / 637 miles
---
You're **7.73** miles ahead for today!
Needed to be on track this week
- **1** mile / 5 days
- **0.2** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for the week per day 1`] = `
"**3.33%** complete
**21.19** / 637 miles
---
You're **3.74** miles ahead for today!
Needed to be on track this week
- **4.99** miles / 5 days
- **1** mile per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for today 1`] = `
"**1.76%** complete
**11.22** / 637 miles
---
Needed to be on track today
- **1** mile
Needed to be on track this week
- **2.74** miles / 1 day
- **2.74** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 8, 12:00am
"
`;

exports[`lib/fitness > handles stats not being defined 1`] = `
"**1.95%** complete
**12.43** / 637 miles
---
Needed to be on track today
- **5.02** miles
Needed to be on track this week
- **13.75** miles / 5 days
- **2.75** miles per day
---
Stats
- **<unknown>** calories burned
- **<unknown>** total time
- **<unknown>** total workouts
---
Updated Jan 11, 12:00am
"
`;

exports[`lib/fitness > shows a different message if on track for the week 1`] = `
"**2.24%** complete
**14.29** / 637 miles
---
You're **5.57** miles ahead for today!
You're **0.33** miles ahead for the week!
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 6, 12:00am
"
`;

exports[`lib/fitness > shows a different message if on track for today 1`] = `
"**2.83%** complete
**18.02** / 637 miles
---
You're **0.57** miles ahead for today!
Needed to be on track this week
- **8.15** miles / 5 days
- **1.63** miles per day
---
Stats
- **2138** calories burned
- **5:11:25** total time
- **8** total workouts
---
Updated Jan 11, 12:00am
"
`;
